[modify] Update swagger.yml and rename some routes
